[package]
categories = ["concurrency"]
description = "NonBlockingMutex is Mutex which doesn't block threads, but executes tasks on first thread who acquires lock or schedules task on thread which acquired lock"
homepage = "https://github.com/ivanivanyuk1993/utility.non_blocking_mutex"
keywords = ["concurrency", "mutex", "non_blocking", "non_blocking_lock", "non_blocking_mutex"]
license = "MIT OR Apache-2.0"
name = "non_blocking_mutex"
readme = "readme.md"
repository = "https://github.com/ivanivanyuk1993/utility.non_blocking_mutex"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sharded_queue = { path = "../../../sharded_queue/Rust/sharded_queue", version = "1.0.9" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
nameof = "1.2.2"

[[bench]]
name = "non_blocking_mutex"
harness = false
