[package]
categories = ["concurrency"]
description = "NonBlockingMutex is currently the fastest way to do expensive calculations under lock, or do cheap calculations under lock when concurrency/load/contention is very high"
homepage = "https://github.com/ivanivanyuk1993/utility.non_blocking_mutex"
keywords = ["concurrency", "lock", "mutex", "non-blocking-lock", "non-blocking-mutex"]
license = "MIT OR Apache-2.0"
name = "non_blocking_mutex"
readme = "readme.md"
repository = "https://github.com/ivanivanyuk1993/utility.non_blocking_mutex"
version = "2.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8.16"
sharded_queue = "1.0.26"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
nameof = "1.2.2"

[[bench]]
name = "non_blocking_mutex"
harness = false

[profile.release]
lto = true